# contextos

./: .env.example  .gitignore  CLAUDE.md  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
apps/hooks-bridge/: Dockerfile  package.json  vitest.config.ts
apps/hooks-bridge/__tests__/integration/: hooks-lifecycle.test.ts
apps/hooks-bridge/src/: config.ts  index.ts
apps/hooks-bridge/src/handlers/: post-tool-use.ts  pre-tool-use.ts  (+2 more)
apps/mcp-server/: Dockerfile  package.json
apps/mcp-server/src/: config.ts  index.ts
apps/vscode/: package.json
apps/vscode/src/: extension.ts
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json
docs/: DEVELOPMENT.md  SYSTEM-DESIGN.md
docs/context-packs/: template.md
docs/feature-packs/: 00-canonical-schema.md  template.md
docs/feature-packs/01-foundation/: implementation.md  spec.md  techstack.md
docs/feature-packs/02-mcp-server/: implementation.md  spec.md  techstack.md
docs/feature-packs/03-hooks-bridge/: implementation.md  spec.md  techstack.md
docs/feature-packs/04-web-app/: implementation.md  spec.md  techstack.md
docs/feature-packs/05-nl-assembly/: implementation.md  spec.md  techstack.md
docs/feature-packs/06-semantic-diff/: implementation.md  spec.md  techstack.md
docs/feature-packs/07-vscode-extension/: implementation.md  spec.md  techstack.md
docs/research/: mcp-sdk.md  research_answers.md
services/nl-assembly/: Dockerfile  pyproject.toml
services/nl-assembly/src/: __init__.py  config.py  embeddings.py  main.py  models.py  search.py
services/nl-assembly/tests/: __init__.py  conftest.py  test_embeddings.py  test_search.py
services/semantic-diff/: Dockerfile  pyproject.toml
services/semantic-diff/src/: __init__.py  analyzer.py  config.py  main.py  models.py
services/semantic-diff/tests/: __init__.py  conftest.py  test_analyzer.py
(+17 files in other folders)
